--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Compiled class file
 *.class
 
-# Log file
-*.log
-
 # BlueJ files
 *.ctxt
 
@@ -21,3 +18,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.idea/
+*.iml
+.settings/
+target/
+
+.project
+.classpath
+.factorypath
+.vscode/
